# rust-comprehensive-template

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  security.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: AGENTS.md  client.rs  error.rs  handlers.rs  lib.rs  middleware.rs  state.rs
crates/cli/: Cargo.toml  config.example.toml
crates/cli/src/: AGENTS.md  completions.rs  config.rs  interactive.rs  lib.rs  main.rs
crates/cli/tests/: AGENTS.md  cli_integration.rs
crates/common/: Cargo.toml
crates/common/src/: AGENTS.md  error.rs  lib.rs  types.rs
crates/database/: Cargo.toml
crates/database/migrations/: 001_create_entities.sql  AGENTS.md
crates/database/src/: AGENTS.md  lib.rs  migrate.rs  pool.rs  repo.rs
crates/etl/: Cargo.toml
crates/etl/src/: AGENTS.md  iterators.rs  lib.rs  parallel.rs  pipeline.rs  streaming.rs
crates/hpc/: Cargo.toml
crates/hpc/benches/: AGENTS.md  benchmarks.rs
crates/hpc/src/: AGENTS.md  async_runtime.rs  lib.rs  parallel.rs  simd.rs  zero_cost.rs
crates/math/: Cargo.toml
crates/math/benches/: AGENTS.md  benchmarks.rs
crates/math/src/: AGENTS.md  lib.rs  mat.rs  quat.rs  transform.rs  vec.rs
crates/ml/: Cargo.toml
crates/ml/src/: AGENTS.md  autograd.rs  lib.rs  loss.rs  nn.rs  optim.rs  rng.rs  tensor.rs
crates/patterns/: Cargo.toml
crates/patterns/src/: AGENTS.md  builder.rs  lib.rs  newtype.rs  strategy.rs  typestate.rs
crates/render/: Cargo.toml
crates/render/examples/: AGENTS.md  nbody.rs
crates/render/src/: AGENTS.md  camera.rs  color.rs  geometry.rs  lib.rs  raytrace.rs
crates/render/tests/: AGENTS.md  nbody_compose.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: AGENTS.md  ecs.rs  interp.rs  lib.rs  numerical.rs  physics.rs  rng.rs  stats.rs
crates/systems/: Cargo.toml
crates/systems/src/: AGENTS.md  ffi.rs  lib.rs  memory.rs  unsafe_rust.rs
crates/testing/: Cargo.toml
crates/testing/benches/: AGENTS.md  benchmarks.rs
crates/testing/src/: AGENTS.md  collections.rs  lib.rs  math.rs
crates/testing/tests/: AGENTS.md  integration.rs
docs/: ARCHITECTURE.md  EXTENDING.md  MEMORY_SAFETY_AND_CONCURRENCY.md  SECURITY_SCANNING.md  TOOLCHAIN.md  TUTORIAL.md  cli.md
