[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
