[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
# `util` adds `ServiceExt::oneshot`, used by the router tests.
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
