[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "demo-cli"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
figment.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
serde.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile = "3"
