[package]
name = "hpc"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
