[package]
name = "testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[[bench]]
name = "benchmarks"
harness = false
